[metadata]
description-file = README.rst

[nosetests]
verbosity=3
detailed-errors=1
debug=nose.loader

# Testing with Mailjet is possible but it requires a Mailjet account which is
# obviously not a good idea to make publicly available.
# So because of Travis this is currently disabled
ignore-files=tests.py

with-doctest=1

#with-coverage=1
#cover-package=mailjet

#pdb=1
#pdb-failures=1

with-django=1
django-settings=tests.settings

with-tissue=1
tissue-ignore=W391
tissue-package=mailjet

[build_sphinx]
source-dir = docs/
build-dir  = docs/_build
all_files  = 1

[upload_sphinx]
upload-dir = docs/_build/html

